# aws-csv-to-confluence

./: .gitignore  Dockerfile  README.md  pyproject.toml
aws_csv_to_confluence/: main.py
tests/: test_main.py
